feat: Add Teller banking, market data, Discord integration
- Replace Plaid with Teller banking integration
- Add market data services (Yahoo Finance, Finnhub news)
- Add AI-powered weekly financial analysis (Claude)
- Add Discord bot integration for notifications
- Add stock watchlist and portfolio tracking

New services:
- tellerService.ts: Bank account connections via Teller.io
- marketService.ts: Stock quotes and performance tracking
- newsService.ts: Market news from Finnhub
- discordService.ts: Discord notifications and bot commands
- analysisService.ts: AI weekly financial analysis

New API routes:
- /api/teller/*: Bank enrollment, sync, accounts
- /api/market/*: Quotes, watchlist, analysis
- /api/discord/*: Server registration, webhook handling

Database migrations applied to Supabase:
- teller_enrollments, teller_accounts tables
- market_data, market_news, weekly_analysis tables
- user_watchlists, user_holdings tables
- discord_guilds, discord_notifications tables
- user_credentials, alert_rules, usage_logs tables

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.8",
     "@ai-sdk/react": "^2.0.9",
+    "@anthropic-ai/sdk": "^0.39.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "ai": "^5.0.9",
     "concurrently": "^9.2.1",
     "date-fns": "^4.1.0",
+    "discord.js": "^14.18.0",
     "dotenv": "^17.2.2",
     "next": "15.4.6",
     "openai": "^5.12.2",
@@ -26,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-plaid-link": "^4.1.1",
     "ws": "^8.18.3",
+    "yahoo-finance2": "^2.14.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
