feat: add recurring Discord notification system
- Add notification_schedules and notification_schedule_runs tables (via Supabase MCP)
- Create cron job routes:
  - /api/teller/sync-all for daily bank syncs
  - /api/discord/scheduled/weekly-report for weekly summaries
  - /api/discord/scheduled/budget-alerts for budget threshold alerts
  - /api/discord/scheduled/market-alerts for watchlist price alerts
- Add /api/notification-schedules CRUD endpoint
- Create NotificationSettings UI component for managing preferences
- Update vercel.json with new cron schedules
- Regenerate TypeScript types for new tables

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "crons": [
-    { "path": "/api/plaid/sync-transactions", "schedule": "0 3 * * *" },
-    { "path": "/api/insights/recompute", "schedule": "0 4 * * *" }
+    { "path": "/api/teller/sync-all", "schedule": "0 3 * * *" },
+    { "path": "/api/insights/recompute", "schedule": "0 4 * * *" },
+    { "path": "/api/discord/scheduled/weekly-report", "schedule": "0 14 * * 0" },
+    { "path": "/api/discord/scheduled/budget-alerts", "schedule": "0 13 * * *" },
+    { "path": "/api/discord/scheduled/market-alerts", "schedule": "0 14-21 * * 1-5" }
   ]
 }
